--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@
 body {
   margin: 0;
   background-color: var(--cream);
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,7 +26,7 @@ body {
   height: 450px;
   background-color: hsl(0, 0%, 100%);
   margin: auto;
-  border-radius: 12px;
+  border-radius: 1rem;
   overflow: hidden;
 }
 
@@ -35,14 +34,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between ;
-  padding: 32px;
+  padding: 2rem;
 }
 
 .item-category {
   text-transform: uppercase;  
   font-family: 'Montserrat', sans-serif;
-  font-size: 12px;
-  letter-spacing: 5px;
+  font-size: 1rem;
+  letter-spacing: .5rem;
 }
 
 .grey-text {
@@ -52,13 +51,13 @@ body {
 .price-container {
   display: flex;
   align-items: center;
-  gap: 16px;
-  padding: 12px 0;
+  gap: 1.2rem;
+  padding: 1rem 0;
 }
 
 .price-actual {
   font-family: 'Fraunces', serif;
-  font-size: 36px;
+  font-size: 2rem;
   color:hsl(158, 36%, 37%);
 }
 
@@ -70,12 +69,12 @@ body {
 button {
   display: flex;
   justify-content: center;
-  gap: 12px;
+  gap: 1.2rem;
   background-color: hsl(158, 36%, 37%);
   font-family: 'Montserrat', sans-serif;
   color: hsl(0, 0%, 100%);
-  padding: 12px 43px; 
-  border-radius: 10px;
+  padding: 1rem 3rem; 
+  border-radius: 1rem;
   border: none;
 }
 
@@ -88,9 +87,9 @@ h1 {
 }
 
 p {
-  font-size: 14px;
+  font-size: .8rem;
   font-family: 'Montserrat', sans-serif;
-  line-height: 1.3rem;
+  line-height: 1.2rem;
 }
 
 .image-container{
@@ -116,7 +115,7 @@ img {
   }
 
   .info-container {
-    gap: 8px;
+    gap: .8rem;
   }
 
   img {
