--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ body {
 
 .card-container {
   display: flex;
-  width: 600px;  
-  height: 450px;
+  max-width: 600px;  
+  max-height: 450px;
   background-color: hsl(0, 0%, 100%);
-  margin: auto;
+  margin: 2rem;
   border-radius: 1rem;
   overflow: hidden;
 }
@@ -93,7 +93,7 @@ p {
 }
 
 .image-container{
-  min-width: 300px;
+  overflow: hidden;
 }
 
 img {
@@ -109,18 +109,12 @@ img {
   .card-container {
     display: flex;
     flex-direction: column;
-    max-width: 95%;
-    max-height: 85%;
-    height: fit-content;
+    margin: 5%;
+    max-height: 75%;
   }
 
   .info-container {
     gap: .8rem;
   }
-
-  img {
-    max-width: 100%;
-  }
-
   
 }
