--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .card-container {
   display: flex;
   max-width: 600px;  
-  max-height: 450px;
+  min-height: 450px;
   background-color: hsl(0, 0%, 100%);
   margin: 2rem;
   border-radius: 1rem;
@@ -42,6 +42,10 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
   letter-spacing: .5rem;
+}
+
+.spaced {
+  line-height: 1.5rem;
 }
 
 .grey-text {
@@ -80,6 +84,7 @@ button {
 
 button:hover {
   background-color: var(--dark-blue);
+  cursor: pointer;
 }
 
 h1 {
@@ -97,7 +102,10 @@ p {
 }
 
 img {
-  max-height: 100%;
+  /* max-height: 100%; */
+  height: 100%;
+  width: 100%;
+  display: block;
 }
 
 .attribution {
